# WarpSPH

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml  shell.nix  usd2ply.py
model/: bunny.ply
scenes/: IISPH_demo.py
wp_sph/: __init__.py  main.py
wp_sph/basic_solvers/: IISPH.py  __init__.py  sph_funcs.py
wp_sph/solver/: IISPH.py  __init__.py  model.py  sph_funcs.py
