[tool.poetry]
name = "WarpSim"
version = "0.1.0"
description = ""
authors = ["Mo Zhehan <mozh23@mails.tsinghua.edu.cn>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.7"
warp-lang = "^1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
