[tool.poetry]
name = "WarpSim"
version = "0.1.0"
description = ""
authors = ["Mo Zhehan <mozh23@mails.tsinghua.edu.cn>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.9"
warp-lang = "^1.6"
pyglet = "^2.1"
pynput = "^1.8"
usd-core = "^25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
